<resources>
    <string name="app_name">tipCalculator</string>
    <string name="topLine">Simple Tip</string>

    <string name="totalBill">Total Bill($):</string>
    <string name="totalBillDefaultText">0</string>

    <string name="tipPercent">Tip(%):</string>
    <string name="tipPercentDefaultText">20</string>

    <string name="splitBill">Split Bill:</string>
    <string name="numOfPeopleDefaultText">1</string>

    <string name="totalToPay">Total to Pay($):</string>
    <string name="totalToPayDefaultText">$0.00</string>

    <string name="totalTip">Total Tip($):</string>
    <string name="totalTipDefaultText">$0.00</string>

    <string name="totalPerPerson">Total Per Person($):</string>
    <string name="totalPerPersonDefaultText">$0.00</string>

    <string name="minusSign">-</string>
    <string name="plusSign">+</string>

    <string name="totalToPayResult">$</string>
    <string name="totalTipResult">$</string>
    <string name="totalPerPersonResult">$</string>

    <string name="numPadText_1">1</string>
    <string name="numPadText_2">2</string>
    <string name="numPadText_3">3</string>
    <string name="numPadText_4">4</string>
    <string name="numPadText_5">5</string>
    <string name="numPadText_6">6</string>
    <string name="numPadText_7">7</string>
    <string name="numPadText_8">8</string>
    <string name="numPadText_9">9</string>
    <string name="numPadText_0">0</string>
    <string name="numPadText_Reset">Reset</string>
    <string name="numPadText_Del">Del</string>

    <color name="red">#DC143C</color>



</resources>
